1/23/14 Solutions: remove code related to aligning scales of graph and pH meter, since the pH meter no longer has a scale
1/23/14 Solutions: remove scale from pH meter
1/23/14 revert: Custom: don't collapse meter when collapse button is pressed, just hide pH picker
1/23/14 Custom: remove dropper and drain, use a fixed volume of solution
1/23/14 Custom: don't collapse meter when collapse button is pressed, just hide pH picker
1/23/14 fix: initial graph layout got hosed by non-zero initial volume
1/23/14 Basics: auto-fill with a specified volume when a solute is selected. Set this to 0L for ph-scale-basics, 0.5L for ph-scale.
1/23/14 fix: pH picker doesn't always disable properly at end of range, causes pH to exceed range
1/23/14 require non-zero volume to be at least 0.1L, same as precision of volume indicator on beaker
1/23/14 make pH picker advance faster when held (reduced intervalDelay to 40ms from 100ms)
1/23/14 shorter points on graph indicators, move indicators closer to scale, less whitespace between scale and indicators (ok to overlap ticks)
1/23/14 move 'Reset All' buttons to same position (lower right) in all screens
1/23/14 add temporary icon for 'Basics' screen
1/23/14 move ph-scale-basics sim title to ph-scale-basics-strings_en.json
1/23/13 make 'Basics' screen an official part of ph-scale sim
1/23/13 MAJOR DESIGN CHANGES REQUESTED
# 1.0.0-dev.6 1/22/14
1/22/14 clip ratio feature to shape of solution in beaker
1/22/14 implement ratio feature as it was in Java, too slow to be usable, not clipped to solution bounds
1/22/14 add Beaker.bounds convenience property
1/21/14 replace instances of HTMLText with SubSupText
# 1.0.0-dev.5 1/21/14
1/21/14 zoom buttons for linear graph
1/20/14 robust implementation for vertical alignment of graph and pH scales
1/20/14 add options.range to PHScaleNode
1/19/14 reorganize CustomGraphNode so that order of instantiation in constructor matches order of appearance