@@ -25,7 +25,7 @@ define( function( require ) {
     thisModel.water = Water;
 
     // Beaker, everything else is positioned relative to it. Offset constants were set by visual inspection.
-    thisModel.beaker = new Beaker( new Vector2( 775, 580 ), new Dimension2( 400, 325 ) );
+    thisModel.beaker = new Beaker(  new Vector2( 750, 580 ), new Dimension2( 450, 325 ) );
 
     // Solution in the beaker
     thisModel.solution = new Solution( new Property( Solute.createCustom( 7 ) ), 0, thisModel.water, 0, thisModel.beaker.volume );
