@@ -1,3 +1,5 @@
+1/23/14 Custom: make beaker same size and location as Solutions screen
+1/23/14 Solutions: make beaker wider, scale up 'Molecule count' feature
 1/23/14 Solutions: remove code related to aligning scales of graph and pH meter, since the pH meter no longer has a scale
 1/23/14 Solutions: remove scale from pH meter
 1/23/14 revert: Custom: don't collapse meter when collapse button is pressed, just hide pH picker
